galeria de imagenes

--- a/galeria de imagenes.html
+++ b/galeria de imagenes.html
@@ -26,6 +26,13 @@
        <li><a href="#img13"><img src="imagenes/img13.jpg" alt=""></a></li>
        <li><a href="#img14"><img src="imagenes/img14colibri.jpg" alt=""></a></li>
        <li><a href="#img15"><img src="imagenes/img15.jpg" alt=""></a></li>
+       <li><a href="#img13"><img src="imagenes/img16.jpg" alt=""></a></li>
+       <li><a href="#img14"><img src="imagenes/img17.jpg" alt=""></a></li>
+       <li><a href="#img13"><img src="imagenes/doble2.jpg" alt=""></a></li>
+       <li><a href="#img13"><img src="imagenes/doble1.jpg" alt=""></a></li>
+       <li><a href="#img13"><img src="imagenes/2p2.jpg" alt=""></a></li>
+       <li><a href="#img13"><img src="imagenes/2p1.jpg" alt=""></a></li>
+       
     </ul>
     <div class="footer"><footer><center><a href="index.html">Pantalla principal</a></center></footer></div>
                   
