--- a/servicios.html
+++ b/servicios.html
@@ -31,6 +31,8 @@
 
                         <h1><b><u>**TE OFRECEMOS**</u></b></h1>
                           <ul><br>
+                            <li>Wifi en todo el predio</li>
+                            <li>T.V. con wifi</li>
                             <li>Desayuno seco.</a></li><br>
                             <li>Blanqueria , ropa de cama , toallas y toallón (opcional)</a></li><br>
                             <h5>Recambio de toallas y toallon c/2 días,<br> Recambio de sabanas c/4 días.</h5><br>
